fixes strange flickering on book archive in filters and adds animations

--- a/scss/site/general.scss
+++ b/scss/site/general.scss
@@ -11,3 +11,15 @@
         margin-bottom: 0;
     }
 }
+
+// FADE IN ON LOAD TO COVER THE STRANGE PAGE BUILD UP.
+
+@-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+@-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+@keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+.fade-in {
+  opacity: 1;
+  animation-delay: 900ms;
+  animation: fadeIn ease-in 1;
+  animation-duration: 500ms;
+}
